[gd_scene load_steps=15 format=3 uid="uid://cecqfhp7ci7rn"]

[ext_resource type="Script" uid="uid://cb15b8qpxdf6y" path="res://source/scripts/card.gd" id="1_vbr0r"]
[ext_resource type="Texture2D" uid="uid://2kst3ugk7mym" path="res://assets/cards/icon_blank.png" id="2_onr8g"]
[ext_resource type="Texture2D" uid="uid://dcvsh55y52s8v" path="res://assets/cards/Generic card.png" id="3_qulsp"]
[ext_resource type="Texture2D" uid="uid://c6vsdgvxosmja" path="res://assets/cards/Haachama card.png" id="4_cln5f"]
[ext_resource type="FontFile" uid="uid://b00a6crxmm10e" path="res://assets/fonts/Pix32.ttf" id="5_ximjd"]
[ext_resource type="FontFile" uid="uid://bb7mjr65gyr7i" path="res://assets/fonts/04B_30__.TTF" id="6_ha05c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onr8g"]
size = Vector2(128, 206)

[sub_resource type="LabelSettings" id="LabelSettings_fd2dk"]
font = ExtResource("5_ximjd")
font_size = 37
outline_size = 12
outline_color = Color(0.8627451, 0.4392157, 0.27058825, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ha05c"]
font = ExtResource("6_ha05c")
font_size = 42
outline_size = 14
outline_color = Color(0.8627451, 0.4392157, 0.27058825, 1)

[sub_resource type="LabelSettings" id="LabelSettings_onr8g"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_qulsp"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_cln5f"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_ximjd"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_t0pk3"]
line_spacing = 2.0
font = ExtResource("5_ximjd")
font_size = 37
outline_size = 8
outline_color = Color(0.8627451, 0.4392157, 0.27058825, 1)

[node name="card" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_vbr0r")

[node name="sprites" type="Node2D" parent="."]

[node name="card template" type="Sprite2D" parent="sprites"]
visible = false
modulate = Color(0.49747366, 0.49747366, 0.49747366, 1)
scale = Vector2(1, 1.6)
texture = ExtResource("2_onr8g")

[node name="image_generic" type="Sprite2D" parent="sprites"]
unique_name_in_owner = true
scale = Vector2(0.333, 0.333)
texture = ExtResource("3_qulsp")

[node name="image_special" type="Sprite2D" parent="sprites"]
unique_name_in_owner = true
visible = false
scale = Vector2(0.333, 0.333)
texture = ExtResource("4_cln5f")

[node name="food" type="Sprite2D" parent="sprites"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_onr8g")

[node name="NameLabel" type="Label" parent="."]
offset_left = -55.0
offset_top = -90.99999
offset_right = 56.0
offset_bottom = -52.999992
scale = Vector2(0.6, 0.6)
text = "Name"
label_settings = SubResource("LabelSettings_fd2dk")
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Cost" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -44.0
offset_right = 83.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.575, 0.575)
text = "0"
label_settings = SubResource("LabelSettings_ha05c")
horizontal_alignment = 2
vertical_alignment = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 42.0
offset_right = 40.0
offset_bottom = 82.0

[node name="StatA" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -90.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_onr8g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatB" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -90.0
offset_right = 50.0
offset_bottom = -40.0
grow_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_qulsp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatC" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_right = -40.0
offset_bottom = 50.0
grow_horizontal = 0
text = "0"
label_settings = SubResource("LabelSettings_cln5f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatD" type="Label" parent="Control"]
visible = false
layout_mode = 1
offset_right = 50.0
offset_bottom = 50.0
text = "0"
label_settings = SubResource("LabelSettings_ximjd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Verbose" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -92.0
offset_right = 80.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.58, 0.58)
text = "1x sweet
1x sour
2x salty
2x umami"
label_settings = SubResource("LabelSettings_t0pk3")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
